# Fullstack-AI-Powered-CV-Scanner

./: .dockerignore  .gitignore  DOCKER.md  README.md  dev.ps1  docker-compose.yml  docker.ps1  requirements.txt  start.ps1  stop.ps1
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/src/: main.rs  models.rs
backend/src/ai/: agent.rs  contact_extractor.rs  core_nlp.rs  cover_letter.rs  email_reply.rs  mod.rs  nlp_processing.rs  prompts.rs  skill_matcher.rs
backend/src/documents/: mod.rs
backend/src/parser/: docx.rs  mod.rs  pdf.rs
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  astro.config.mjs  package-lock.json  package.json  run-dev.cjs  tailwind.config.mjs
frontend/src/components/: App.tsx  AppWrapper.tsx  CoverLetterWriter.tsx  EmailWriter.tsx  ResultsPanel.tsx  UploadZone.tsx
frontend/src/pages/: index.astro
frontend/src/styles/: globals.css
shared/: types.ts
