[package]
name = "resume-scanner-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

# File parsing
pdf-extract = "0.7"
zip = "0.6"
xml-rs = "0.8"
regex = "1.10"

# AI integration
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

# Document generation
docx-rs = "0.4"
pdf = "0.9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
